# easygraph-bench

./: .bumpversion.cfg  .gitignore  Makefile  README.md  add_graph_info_and_order_tool_to_csv.py  bench-results.db.bak  bench.py  bench.sh  bench_amazon.py  bench_bio.py  bench_cheminfo.py  bench_cheminformatics.py  bench_coauthorship.py  bench_eco.py  bench_enron.py  bench_er_1000.py  bench_er_10000.py  bench_er_1000_directed.py  bench_er_200.py  bench_er_2000.py  bench_er_2000_directed.py  bench_er_200_directed.py  bench_er_500.py  bench_er_5000.py  bench_er_5000_directed.py  bench_er_500_directed.py  bench_er_paper_20221213_1000000.py  bench_er_paper_20221213_50000.py  bench_er_paper_20221213_500000.py  bench_er_paper_20221221_1000000_100000.py  bench_er_paper_20221221_1000000_1000000.py  bench_er_paper_20221221_1000000_200000.py  bench_er_paper_20221221_1000000_2000000.py  bench_er_paper_20221221_1000000_50000.py  bench_er_paper_20221221_1000000_500000.py  bench_er_paper_20221221_1000000_5000000.py  bench_er_paper_20221221_100000_100000.py  bench_er_paper_20221221_100000_200000.py  bench_er_paper_20221221_100000_50000.py  bench_er_paper_20221221_100000_500000.py  (+150 more)
ansible-playbooks/: clone-repos.yml  configure-conda.yml  configure-zshrc.yml  install-conda.yml  install-pipx.yml  install-vimrc-omz.yml
archive/: bench.py
dataset/: bio.edgelist  cheminformatics.edgelist  eco.edgelist  pgp.edgelist  pgp_undirected.edgelist  road.edgelist  uspowergrid.edgelist
explorations/: 20230331-all-without-google-pokec.ipynb  20230403-lastfm.ipynb  20230426-multiprocessing.ipynb  (+9 more)
(+49 files in other folders)
